# ros2_trt_pose

./: README.md
docker/: README.md  docker_build.sh  docker_run.sh  dockerfile.ros.eloquent.trt_pose
pose_msgs/: CMakeLists.txt  package.xml
pose_msgs/msg/: BodypartDetection.msg  PersonDetection.msg
ros2_trt_pose/: package.xml  setup.cfg  setup.py
ros2_trt_pose/launch/: pose-estimation.launch.py  pose_estimation.rviz
ros2_trt_pose/ros2_trt_pose/: helper.py  live_demo.py  utils.py
